# chess-engine

./: .gitignore
chess-engine-backend/: Board.h  CMakeLists.txt  Driver.h  main.cpp  utils.cpp  utils.h
chess-engine-frontend/: README.md  dev-app-update.yml  electron-builder.yml  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
chess-engine-frontend/src/dtos/: client.dto.ts
chess-engine-frontend/src/main/: index.ts
chess-engine-frontend/src/preload/: index.d.ts  index.ts
chess-engine-frontend/src/proto/: chess_service_pb.d.ts
chess-engine-frontend/src/renderer/src/: App.tsx  main.tsx
chess-engine-frontend/src/renderer/src/components/: Board.tsx
chess-engine-proto/cpp-defs/: chess_service.pb.cc  chess_service.pb.h
chess-engine-proto/proto/: chess_service.proto
scripts/: gen_proto_defs.sh
